more fix on blurring

--- a/main.less
+++ b/main.less
@@ -503,7 +503,7 @@ input.squareButton.primary {
     position: absolute;
     left: 50%;
     bottom: 0;
-    transform: translateX(-50%);
+    transform: translateZ(0) translateX(-50%);
     white-space: nowrap;
     overflow: hidden;
     .card {
